add title text for download.txt links

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -228,19 +228,19 @@
         <td><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a></td>
         <td>http, EU</td>
         <td>7</td>
-        <td><a href="/download.txt?source=sesse&max-pieces=7"><span class="icon icon-list"></span></a></td>
+        <td><a href="/download.txt?source=sesse&max-pieces=7" title="List of URLs (txt)"><span class="icon icon-list"></span></a></td>
       </tr>
       <tr>
         <td><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a></td>
         <td>http, https, EU</td>
         <td>7</td>
-        <td><a href="/download.txt?source=lichess&max-pieces=7"><span class="icon icon-list"></span></a></td>
+        <td><a href="/download.txt?source=lichess&max-pieces=7" title="List of URLs (txt)"><span class="icon icon-list"></span></a></td>
       </tr>
       <tr>
         <td><a href="https://ipfs.syzygy-tables.info/">ipfs.syzygy-tables.info</a></td>
         <td>ipfs, Cloudflare</td>
         <td>7</td>
-        <td><a href="/download.txt?source=ipfs&max-pieces=7"><span class="icon icon-list"></span></a></td>
+        <td><a href="/download.txt?source=ipfs&max-pieces=7" title="List of URLs (txt)"><span class="icon icon-list"></span></a></td>
       </tr>
       <tr>
         <td><a href="http://oics.olympuschess.com/">oics.olympuschess.com</a></td>
