delete some font types

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -307,8 +307,7 @@ footer > .inner {
 
 @font-face {
   font-family: 'fontello';
-  src: url('/static/fonts/fontello.eot');
-  src: url('/static/fonts/fontello.eot?#iefix') format('embedded-opentype'), url('/static/fonts/fontello.woff2') format('woff2'), url('/static/fonts/fontello.woff') format('woff'), url('/static/fonts/fontello.ttf') format('truetype'), url('/static/fonts/fontello.svg#fontello') format('svg');
+  src: url('/static/fonts/fontello.woff2') format('woff2'), url('/static/fonts/fontello.woff') format('woff');
   font-display: block;
 }
 
