remove useless precision from line length

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,7 +79,7 @@ body {
   overflow-x: hidden;
   font-family: Arial,sans-serif;
   font-size: 14px;
-  line-height: 1.42857143;
+  line-height: 1.43;
   color: var(--body-color);
   background: var(--body-bg-color);
 }
