--- a/static/css/style.css
+++ b/static/css/style.css
@@ -229,35 +229,35 @@ section {
 .list-group {
   margin-bottom: 20px;
 }
-a.list-group-item {
+a.li {
   color: var(--body-color);
   text-decoration: none;
 }
-a.list-group-item:active {
+a.li:active {
   box-shadow: inset 0 var(--shadow-inset) 5px var(--shadow);
 }
-a.list-group-item:focus, a.list-group-item:hover {
+a.li:focus, a.li:hover {
   background: var(--shaded-bg-color);
 }
-.list-group-item {
+.li {
   position: relative;
   display: block;
   padding: 10px 15px;
   margin-bottom: -1px;
   border: 1px solid var(--border-color);
 }
-.list-group-item:first-child {
+.li:first-child {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
-.list-group-item:last-child {
+.li:last-child {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.list-group-item > .badge {
+.li > .badge {
   float: right;
 }
-.list-group-item > .badge+.badge {
+.li > .badge+.badge {
   margin-right: 5px;
 }
 .badge {
@@ -445,7 +445,7 @@ input[type=text] {
 
 /* Stats */
 
-.stats .list-group-item {
+.stats .li {
   text-align: center;
 }
 .draws {
