--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
-@import "cburnett.css";
-@import "chessground.css";
+@import 'cburnett.css';
+@import 'chessground.css';
 
 :root {
   --draw-bg-color: #757575;
